@@ -77,20 +77,29 @@ import java.util.*;
 public class Genome {
 
     private static final int MAX_WHOLE_GENOME_LONG = 100;
-    private static Logger log = LogManager.getLogger(Genome.class);
-    public static Genome nullGenome = null;
+    private static final Logger log = LogManager.getLogger(Genome.class);
+    public static final Genome NULL_GENOME = new Genome("None", List.of(new Chromosome(0, "", 0)));
 
-    private String id;
-    private String displayName;
+    // Map some common IGV genome IDs to UCSC equivalents.  Primarily for BLAT usage
+    private static final Map<String, String> ucsdIDMap = Map.of(
+            "1kg_ref", "hg18",
+            "1kg_v37", "hg19",
+            "b37", "hg19"
+    );
+
+    private final String id;
+    private final String displayName;
+
+    private final Map<String, Chromosome> chromosomeMap;
+    private final Map<String, Long> cumulativeOffsets = new HashMap<>();
+    private final Sequence sequence;
+    private final List<Hub> trackHubs;
+
+    private long nominalLength = -1;
     private List<String> chromosomeNames;
     private List<String> longChromosomeNames;
-    private Map<String, Chromosome> chromosomeMap;
-    private long totalLength = -1;
-    private long nominalLength = -1;
-    private Map<String, Long> cumulativeOffsets = new HashMap();
     private Map<String, String> chrAliasCache = new HashMap<>();
     private ChromAliasSource chromAliasSource;
-    private Sequence sequence;
     private FeatureTrack geneTrack;
     private String species;
     private String ucscID;
@@ -103,16 +112,8 @@ public class Genome {
     private String defaultPos;
     private String nameSet;
     private Hub genomeHub;
-    private List<Hub> trackHubs;
     private GenomeConfig config;
     private FeatureDB featureDB;
-
-    public synchronized static Genome nullGenome() {
-        if (nullGenome == null) {
-            nullGenome = new Genome("None", Arrays.asList(new Chromosome(0, "", 0)));
-        }
-        return nullGenome;
-    }
 
     public Genome(GenomeConfig config) throws IOException {
         this.config = config;
@@ -123,11 +124,7 @@ public class Genome {
         featureDB = new FeatureDB(this);
 
         //Collections.synchronizedSortedSet(new TreeSet<>((o1, o2) -> o1.getOrder()  - o2.getOrder()));
-        if (config.ucscID == null) {
-            ucscID = ucsdIDMap.containsKey(id) ? ucsdIDMap.get(id) : id;
-        } else {
-            ucscID = config.ucscID;
-        }
+        ucscID = config.ucscID == null ? ucsdIDMap.getOrDefault(id, id) : config.ucscID;
         blatDB = (config.blatDB != null) ? config.blatDB : ucscID;
         defaultPos = config.defaultPos;
 
@@ -198,12 +195,12 @@ public class Genome {
                 }
             }
             // If whole genome chromosomes are not explicitly specified try to infer them.
-            if (this.longChromosomeNames == null && config.wholeGenomeView != false) {
+            if (this.longChromosomeNames == null && config.wholeGenomeView) {
                 this.longChromosomeNames = computeLongChromosomeNames();
             }
         } else {
             // No chromosome list.  Try to fetch chromosome names from the sequence
-            if (this.chromosomeNames.isEmpty()) {
+            if (this.chromosomeNames.isEmpty() && sequence != null) {
                 this.chromosomeNames = sequence.getChromosomeNames();
             }
         }
@@ -270,7 +267,7 @@ public class Genome {
             // Set a "genomeHub", which by convention is the first
             // hub listed.
             if (trackHubs.size() > 0) {
-                genomeHub = trackHubs.iterator().next();
+                genomeHub = trackHubs.getFirst();
             }
         }
 
@@ -549,7 +546,7 @@ public class Genome {
         }
 
 
-        String c = wgChrNames.get(wgChrNames.size() - 1);
+        String c = wgChrNames.getLast();
         int bp = (int) (genomeKBP - cumOffset) * 1000;
         return new ChromosomeCoordinate(c, bp);
     }
@@ -637,14 +634,10 @@ public class Genome {
     }
 
     /**
-     * Return the reference base at the given position.  Can return null if reference sequence is unknown
-     *
-     * @param chr
-     * @param pos
-     * @return the reference base, or null if unknown
-     */
+     * Return the reference base at the given position.
+     * */
     public byte getReference(String chr, int pos) {
-        return sequence == null ? null : sequence.getBase(chr, pos);
+        return sequence == null ? 0 : sequence.getBase(chr, pos);
     }
 
 
@@ -673,7 +666,7 @@ public class Genome {
      * @return
      */
     public List<String> getLongChromosomeNames() {
-        return longChromosomeNames == null ? Collections.EMPTY_LIST : longChromosomeNames;
+        return longChromosomeNames == null ? Collections.emptyList() : longChromosomeNames;
     }
 
     public long getWGLength() {
@@ -721,16 +714,6 @@ public class Genome {
             }
         }
         return null;
-    }
-
-    // Map some common IGV genome IDs to UCSC equivalents.  Primarily for BLAT usage
-    private static Map<String, String> ucsdIDMap;
-
-    static {
-        ucsdIDMap = new HashMap<>();
-        ucsdIDMap.put("1kg_ref", "hg18");
-        ucsdIDMap.put("1kg_v37", "hg19");
-        ucsdIDMap.put("b37", "hg19");
     }
 
     public void setAnnotationResources(List<ResourceLocator> annotationResources) {
